[gd_scene load_steps=11 format=3 uid="uid://ftb4ohcongtb"]

[ext_resource type="Texture2D" uid="uid://bxautcbj6nubj" path="res://Graphics/Slime.png" id="1_jba2w"]
[ext_resource type="Script" path="res://Scripts/player_slime.gd" id="1_q1831"]
[ext_resource type="PackedScene" uid="uid://kh37k3kjv2t2" path="res://Scenes/hurt_box.tscn" id="3_w7wxc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n2dfc"]
radius = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_83wyx"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ly3fg"]
bg_color = Color(0.215686, 0.580392, 0.431373, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="CircleShape2D" id="CircleShape2D_f6tm4"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_s0thg"]
radius = 554.236

[sub_resource type="CircleShape2D" id="CircleShape2D_rxbck"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_f0sh4"]

[node name="PlayerSlime" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_q1831")

[node name="Slime" type="Sprite2D" parent="."]
texture = ExtResource("1_jba2w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_n2dfc")

[node name="ShootingPoint" type="Marker2D" parent="."]

[node name="ShootingTimer" type="Timer" parent="."]
autostart = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -36.0
offset_top = -24.0
offset_right = 36.0
offset_bottom = -18.0
theme_override_styles/background = SubResource("StyleBoxFlat_83wyx")
theme_override_styles/fill = SubResource("StyleBoxFlat_ly3fg")
value = 100.0
show_percentage = false

[node name="HurtBox" parent="." instance=ExtResource("3_w7wxc")]
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("CircleShape2D_f6tm4")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ArrowAttack" type="Node2D" parent="."]

[node name="ArrowTimer" type="Timer" parent="ArrowAttack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="ArrowAttackTimer" type="Timer" parent="ArrowAttack/ArrowTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_s0thg")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
visible = false
shape = SubResource("CircleShape2D_rxbck")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_f0sh4")

[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="ArrowAttack/ArrowTimer" to="." method="_on_arrow_timer_timeout"]
[connection signal="timeout" from="ArrowAttack/ArrowTimer/ArrowAttackTimer" to="." method="_on_arrow_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]

[editable path="HurtBox"]
